docs(planned): record classpath JPMS decision and testing plan for lathe-mcp-server
Fold the JPMS spike outcome and the testing strategy into the AI-agent
integration design.

JPMS / classpath:
- The spike (SDK 2.0.1) found the MCP SDK cannot go on the Java module
  path: mcp-core and mcp-json-jackson3 ship a hyphenated
  Automatic-Module-Name (an invalid module name), so jar --describe-module
  fails. There is NO split package (the jackson3 binding uses distinct
  .jackson3 subpackages; verified). Upstream already fixed the names on
  main (commit 183935b, plus an aggregator module-info.java), not yet in a
  release.
- Decision: lathe-mcp-server runs on the CLASSPATH for now (-cp launcher,
  ALL-UNNAMED javac exports), revisiting a module-path build once a fixed
  SDK release lands. Consequence: no module-info change to lathe-server
  and no qualified export -- the LatheEngine facade is a plain public
  class, reachable because lathe-server loads as an unnamed-module
  classpath library in the MCP process. The editor module-path launcher is
  untouched. Recorded as a tracking item to watch for the fixed release.

Testing plan (new section):
- Layer 1: LatheEngine facade tests against a fixture .lathe/ workspace,
  reusing lathe-server's compile harness.
- Layer 2: in-process MCP protocol tests via the SDK in-memory transport.
- Layer 3: end-to-end lathe-mcp-launcher.sh over stdio as an invoker
  fixture (dev/mcp.py driver), promoting the Phase 0 spike to a committed
  test -- the layer that retires the classpath / in-process-javac risk,
  built first as the walking skeleton.
- Layer 4: diagnostics parity smoke vs the LSP path.
- Layer 5: manual cross-agent acceptance (Claude Code / Codex / Inspector).

Also confirmed the facade seams exist (initialize(Path), didOpen,
runnables/runTest futures, LatheLanguageClient for diagnostic capture).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>